# coverage2lcov

./: .clippy.toml  .envrc  .gitignore  .rustfmt.toml  .vimrc  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs
tests/fixtures/: test.coverage
